discussion/kv_engine/157996/157996_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39338 magma-kvstore: Add Status::DiskFull error code to rollback errors

Change-Id: I9abf47ccd5ff8075e3c9f4979d4ea6ef75dd06f1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Sarath Lakshman
Date: 2021-08-05 10:19:03.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-05 10:29:53.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38334/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(2326): error C2039: "DiskFull": is not a member of "magma::Status" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38334/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11097/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18: error: no member named "DiskFull" in "magma::Status" [clang-diagnostic-error]
    case Status::DiskFull:
                 ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11097/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11097/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32691/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32691/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11809/ : FAILURE

Compile error at [2021-08-05T10:21:15.316Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11809/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/706/ : FAILURE

Compile error at [2021-08-05T10:26:23.930Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: ?DiskFull? is not a member of ?magma::Status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/706/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/724/ : FAILURE

Compile error at [2021-08-05T10:20:57.395Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/724/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12881/ : FAILURE

Compile error at [2021-08-05T10:22:37.588Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: ?DiskFull? is not a member of ?magma::Status?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12881/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13237/ : FAILURE

Compile error at [2021-08-05T10:24:21.771Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13237/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20777/ : FAILURE

Compile error at [2021-08-05T10:25:46.709Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2326:18:
error: no member named "DiskFull" in "magma::Status"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20777/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9781/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12693/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
